--- a/public/css/admindashboard.css
+++ b/public/css/admindashboard.css
@@ -40,27 +40,34 @@ body {
 
 .kotak {
     width: 100%;
-    padding: 20px 30px;
+    padding: 15px 20px;
     margin: auto;
     background-image: linear-gradient(to bottom, #475ffd, #d9d9d9);
     display: flex;
-    border-radius: 35px;
+    border-radius: 20px;
     justify-content: space-between;
-    margin-top: 1%;
-    box-shadow: 3px 3px 6px #333;
+    margin-top: 10px;
+    /* box-shadow: 3px 3px 6px #333; */
 }
 .ini {
-    font-size: 50px;
+    font-size: 35px;
+    color: #1e223c;
     /* background-color: aqua; */
 }
 
 .txtdb {
-    font-size: 40px;
-    margin-top: 1%;
-    margin-left: 2%;
+    font-size: 20px;
+    margin-top: 9px;
+    margin-left: 8px;
 }
 
 .itu {
+    color: #1e223c;
+    font-size: 24px ;
+}
+
+.motto {
+    color: #1e223c;
     font-size: 24px ;
 }
 
@@ -93,8 +100,54 @@ body {
 }
 
 .isi {
-    margin-left: 50px;
+    margin-left: 35px;
 }
+
+.r-15 {
+    border-radius: 15px;
+}
+
+.client {
+    height: 270px;
+    width: 350px;
+    margin-left: 30px;
+}
+
+.karyawan {
+    height: 230px;
+    width: 320px;
+    margin-left: 30px;
+}
+
+.f-client {
+    font-size: 50px;
+    font-weight: bold;
+    margin-top: 20%;
+    text-align: center;
+    /* margin-left: 15px; */
+}
+
+.f-sub {
+    font-size: 35px;
+    font-weight: 500;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.f-karyawan {
+    font-size: 50px;
+    font-weight: bold;
+    margin-top: 15%;
+    text-align: center;
+}
+
+.f-kar {
+    font-size: 35px;
+    font-weight: 500;
+    margin-top: 10px;
+    text-align: center;
+}
+
 
 
 
@@ -102,9 +155,17 @@ body {
     width: 100%;
     margin: auto;
     height: 60%;
-    border-radius: 35px;
-    background-color: #475ffd;
     margin-top: 20px;
+}
+
+.bg-purple {
+    background-color: #475ffd;
+}
+.bg-purple-muda {
+    background-color: #9ebaff;
+}
+.bg-purple-semi {
+    background-color: #7793ff;
 }
 
 
@@ -115,15 +176,22 @@ body {
     background-size: cover;
 }
 
-.kotakdalam {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    align-items: start;
-    padding-top: 20px;
+.h-45 {
+    height: 45%;
+}
 
+
+
+.w-60 {
+    width: 60%;
+}
+
+.w-40 {
+    width: 40%;
+}
+
+.w-set {
+    width: 50%;
 }
 
 .kotakaktif {
@@ -153,8 +221,8 @@ body {
 }
 
 .Klinik {
-    width: 260px !important;
-    height: 150px !important;
+    width: 240px !important;
+    height: 140px !important;
     padding: 0;
     }
 
@@ -176,3 +244,27 @@ body {
   .content {
     flex: 1; /* Take up the remaining space */
   }
+
+
+  /* Kalender */
+  .calendar {
+    width: 80%;
+    margin-top: 30px;
+    margin: auto;
+    height: 300px;
+    background-color: #9ebaff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.date {
+    font-size: 3em;
+    margin-bottom: 10px;
+}
+
+.time {
+    font-size: 2em;
+    color: #333;
+}
